--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,15 +1,15 @@
-- src: git+https://github..com/M-A/required_software.git
+- src: git+https://github.com/VoightCloud/GoldCent7Required.git
   name: required_software
   version: main
   scm: git
-- src: git+https://github.com/M-A/scapscan.git
-  name: scapscan
-  version: main
-  scm: git
-- src: git+https://github..com/M-A/register_agents.git
-  name: register_agents
-  version: main
-  scm: git
-- src: git+https://github.com/M-A/aide-update.git
-  name: aide_update
-  version: master
+#- src: git+https://github.com/M-A/scapscan.git
+#  name: scapscan
+#  version: main
+#  scm: git
+#- src: git+https://github..com/M-A/register_agents.git
+#  name: register_agents
+#  version: main
+#  scm: git
+#- src: git+https://github.com/M-A/aide-update.git
+#  name: aide_update
+#  version: master
