--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,6 +1,6 @@
 - src: git+https://github.com/VoightCloud/Centos7Required.git
   name: required_software
-  version: feature/clamav
+  version: main
   scm: git
 - src: git+https://github.com/VoightCloud/Centos7SCAPScan.git
   name: scapscan
